Adjust logo sizing to prevent overlap with sign-in modal
Reduce logo image height on mobile from 11rem to 7rem and add
margin-top on desktop. Keeps sign-in modal position unchanged.

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -8,11 +8,18 @@
 @media (min-width: 769px) {
   .logo {
     height: 10rem;
+    margin-top: 3rem;
   }
 }
 
 .logo-img {
-  height: 11rem;
+  height: 7rem;
+}
+
+@media (min-width: 769px) {
+  .logo-img {
+    height: 11rem;
+  }
 }
 
 .login-form {
